crates/core/snapshots/vue_template_compiler__core__tokenizer__test__raw_text.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text:
    raw: "</style"
    ops:
      bits: 0

