crates/core/snapshots/vue_template_compiler__core__tokenizer__test__test-6.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: tag
    attributes:
      - name: "=value"
        value: ~
        name_loc:
          start:
            offset: 5
            line: 1
            column: 6
          end:
            offset: 11
            line: 1
            column: 12
        location:
          start:
            offset: 5
            line: 1
            column: 6
          end:
            offset: 12
            line: 1
            column: 13
    self_closing: true

